# ClearZone

./: .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: PerlinNoise.hpp  biome.h  caravan.h  cell.h  choice.h  docilecreature.h  entity.h  happenings.h  humanoid.h  item.h  player.h  world.h  worldGen.h
core/src/: biome.cpp  biome.h  caravan.cpp  cell.cpp  cell.h  docilecreature.cpp  entity.cpp  entity.h  happenings.cpp  humanoid.cpp  item.cpp  item.h  player.cpp  world.cpp  world.h  world.outline
gtkui/: CMakeLists.txt
gtkui/include/: animation.h  panic.h  ui.h  world_shim.h
gtkui/src/: animation.c  main.cpp  panic.c  stb_impl.c  ui.c  ui.cpp  world_shim.cpp
termui/: CMakeLists.txt
termui/src/: main.cpp
webui/: CMakeLists.txt
